<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/nav_edit_profile"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_opacity_black_24dp"
            android:title="@string/nav_donate"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/nav_receiver"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/nav_receive"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/nav_match_viewer"
            android:icon="@drawable/ic_compare_black_24dp"
            android:title="@string/nav_view_match" />
    </group>
</menu>
