<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edit_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/edit_profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_name"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_name" />

    <EditText
        android:id="@+id/edit_profile_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_email"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_email" />

    <EditText
        android:id="@+id/edit_profile_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/age_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_number"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_number"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_number" />

    <Spinner
        android:id="@+id/edit_profile_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_age"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_age"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_age" />

    <TextView
        android:id="@+id/edit_profile_textview_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_spinner"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_spinner" />

    <RadioGroup
        android:id="@+id/edit_profile_radio_group_gender"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_textview_gender"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_textview_gender"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MALE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="FEMALE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioButtonMale"
                app:layout_constraintTop_toTopOf="@+id/radioButtonMale" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RadioGroup>

    <TextView
        android:id="@+id/edit_profile_status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_textview_gender"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_textview_gender" />

    <RadioGroup
        android:id="@+id/edit_profile_radio_group_status"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_status_textview"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_radio_group_gender" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonReceiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="Receiver"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioButtonDonor"
                app:layout_constraintTop_toTopOf="@+id/radioButtonDonor"
                app:layout_constraintVertical_bias="0.454" />

            <RadioButton
                android:id="@+id/radioButtonDonor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Donor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RadioGroup>

    <Button
        android:id="@+id/edit_profile_submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/home_button"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_spinner"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>